--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.extension-wrapper {
+  width: 800px;
+  height: 600px;
+}
